// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NCGTransferredEventObserver notify If overflowed amount is lower than minimum, then refund check 1`] = `
Array [
  Array [
    "info",
    Object {
      "amount": 48651.5,
      "content": "NCG -> wNCG request success",
      "ethereumTxId": "TRANSACTION-HASH",
      "fee": 1298.5,
      "libplanetTxId": "TX-A",
      "recipient": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
  Array [
    "error",
    Object {
      "amount": 150,
      "cause": "24 hr transfer maximum 50000 reached. User transferred 49950 NCGs in 24 hrs.",
      "content": "NCG -> wNCG request failure",
      "libplanetTxId": "TX-SHOULD-REFUND",
      "recipient": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
      "refundAmount": 100,
      "refundTxId": "TX-ID",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
  Array [
    "error",
    Object {
      "amount": 150,
      "cause": "Overflowed Amount 50 is lower than minimum NCG. Refund NCG.",
      "content": "NCG -> wNCG request failure",
      "libplanetTxId": "TX-SHOULD-REFUND",
      "recipient": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify If overflowed amount is lower than minimum, then refund check 2`] = `
Array [
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Event",
          "color": "#42f5aa",
          "fallback": "NCG 0x2734048eC2892d111b4fbAB224400847544FC872 → wNCG 0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
          "fields": Array [
            Object {
              "title": "9c network transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-A",
            },
            Object {
              "title": "Ethereum network transaction",
              "value": "https://ropsten.etherscan.io/tx/TRANSACTION-HASH",
            },
            Object {
              "title": "sender (NineChronicles)",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "recipient (Ethereum)",
              "value": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
            },
            Object {
              "title": "amount",
              "value": "48651.5",
            },
            Object {
              "title": "fee",
              "value": "1298.5",
            },
          ],
        },
      ],
      "text": "NCG → wNCG event occurred.",
    },
  ],
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Event",
          "color": "#42f5aa",
          "fallback": "Refund NCG 100 in 150 to 0x2734048eC2892d111b4fbAB224400847544FC872",
          "fields": Array [
            Object {
              "title": "Reason",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872 tried to exchange 150 and already exchanged 49950 and users can exchange until 50000 in 24 hours so refund NCG as 100",
            },
            Object {
              "title": "Address",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "Request transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-SHOULD-REFUND",
            },
            Object {
              "title": "Request Amount",
              "value": "150",
            },
            Object {
              "title": "Refund transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "Refund Amount",
              "value": "100",
            },
          ],
        },
      ],
      "text": "NCG refund event occurred.",
    },
  ],
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Event",
          "color": "#42f5aa",
          "fallback": "Refund NCG 50 in 50 to 0x2734048eC2892d111b4fbAB224400847544FC872",
          "fields": Array [
            Object {
              "title": "Reason",
              "value": "Overflowed Amount 50 is lower than minimum NCG. Refund NCG.",
            },
            Object {
              "title": "Address",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "Request transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-SHOULD-REFUND",
            },
            Object {
              "title": "Request Amount",
              "value": "50",
            },
            Object {
              "title": "Refund transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "Refund Amount",
              "value": "50",
            },
          ],
        },
      ],
      "text": "NCG refund event occurred.",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify pagerduty ethereum transfer error message - snapshot 1`] = `
Array [
  Array [
    "Unexpected error during wrapping NCG",
    Object {
      "amountString": "100.23",
      "errorMessage": "Error: mockWrappedNcgMinter.mint error",
      "recipient": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
      "txId": "TX-ID",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch ethereum transfer error message - snapshot 1`] = `
Array [
  Array [
    "error",
    Object {
      "amount": "100.23",
      "cause": "Error: mockWrappedNcgMinter.mint error",
      "content": "NCG -> wNCG request failure",
      "libplanetTxId": "TX-ID",
      "recipient": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch ethereum transfer error message - snapshot 2`] = `
Array [
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Error",
          "color": "#ff0033",
          "fallback": "NCG 0x2734048eC2892d111b4fbAB224400847544FC872 → wNCG 0x4029bC50b4747A037d38CF2197bCD335e22Ca301 failed",
          "fields": Array [
            Object {
              "title": "9c network transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "sender (NineChronicles)",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "recipient (Ethereum)",
              "value": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
            },
            Object {
              "title": "amount",
              "value": "100.23",
            },
            Object {
              "title": "error",
              "value": "Error: mockWrappedNcgMinter.mint error",
            },
          ],
        },
      ],
      "text": "NCG → wNCG event failed. @gamefi-be",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch message - snapshot 1`] = `
Array [
  Array [
    "info",
    Object {
      "amount": 90.23,
      "content": "NCG -> wNCG request success",
      "ethereumTxId": "TRANSACTION-HASH",
      "fee": 10,
      "libplanetTxId": "TX-ID",
      "recipient": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch message - snapshot 2`] = `
Array [
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Event",
          "color": "#42f5aa",
          "fallback": "NCG 0x2734048eC2892d111b4fbAB224400847544FC872 → wNCG 0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
          "fields": Array [
            Object {
              "title": "9c network transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "Ethereum network transaction",
              "value": "https://ropsten.etherscan.io/tx/TRANSACTION-HASH",
            },
            Object {
              "title": "sender (NineChronicles)",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "recipient (Ethereum)",
              "value": "0x4029bC50b4747A037d38CF2197bCD335e22Ca301",
            },
            Object {
              "title": "amount",
              "value": "90.23",
            },
            Object {
              "title": "fee",
              "value": "10",
            },
          ],
        },
      ],
      "text": "NCG → wNCG event occurred.",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch object error message - snapshot 1`] = `
Array [
  Array [
    "error",
    Object {
      "amount": "100.23",
      "cause": "{\\"code\\":-32000,\\"message\\":\\"err: max fee per gas less than block base fee: address 0x9093dd96c4bb6b44A9E0A522e2DE49641F146223, maxFeePerGas: 300000000000 baseFee: 305545815494 (supplied gas 11118348)\\"}",
      "content": "NCG -> wNCG request failure",
      "libplanetTxId": "TX-ID",
      "recipient": "0x0000000000000000000000000000000000000001",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch object error message - snapshot 2`] = `
Array [
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Error",
          "color": "#ff0033",
          "fallback": "NCG 0x2734048eC2892d111b4fbAB224400847544FC872 → wNCG 0x0000000000000000000000000000000000000001 failed",
          "fields": Array [
            Object {
              "title": "9c network transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "sender (NineChronicles)",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "recipient (Ethereum)",
              "value": "0x0000000000000000000000000000000000000001",
            },
            Object {
              "title": "amount",
              "value": "100.23",
            },
            Object {
              "title": "error",
              "value": "{\\"code\\":-32000,\\"message\\":\\"err: max fee per gas less than block base fee: address 0x9093dd96c4bb6b44A9E0A522e2DE49641F146223, maxFeePerGas: 300000000000 baseFee: 305545815494 (supplied gas 11118348)\\"}",
            },
          ],
        },
      ],
      "text": "NCG → wNCG event failed. @gamefi-be",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch refund error message - snapshot 1`] = `
Array [
  Array [
    "error",
    Object {
      "amount": "1.23",
      "cause": "Error: mockNcgTransfer.transfer error",
      "content": "NCG -> wNCG request failure",
      "libplanetTxId": "TX-ID",
      "recipient": "0x0000000000000000000000000000000000000000",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch refund error message - snapshot 2`] = `
Array [
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Error",
          "color": "#ff0033",
          "fallback": "NCG 0x2734048eC2892d111b4fbAB224400847544FC872 → wNCG 0x0000000000000000000000000000000000000000 failed",
          "fields": Array [
            Object {
              "title": "9c network transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "sender (NineChronicles)",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "recipient (Ethereum)",
              "value": "0x0000000000000000000000000000000000000000",
            },
            Object {
              "title": "amount",
              "value": "1.23",
            },
            Object {
              "title": "error",
              "value": "Error: mockNcgTransfer.transfer error",
            },
          ],
        },
      ],
      "text": "NCG → wNCG event failed. @gamefi-be",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch string error message - snapshot 1`] = `
Array [
  Array [
    "error",
    Object {
      "amount": 1.23,
      "cause": "Invalid 9c transaction ID",
      "content": "NCG -> wNCG request failure",
      "libplanetTxId": "TX-ID",
      "recipient": "0x0000000000000000000000000000000000000000",
      "sender": "0x2734048eC2892d111b4fbAB224400847544FC872",
    },
  ],
]
`;

exports[`NCGTransferredEventObserver notify slack/opensearch string error message - snapshot 2`] = `
Array [
  Array [
    Object {
      "attachments": Array [
        Object {
          "author_name": "Bridge Event",
          "color": "#42f5aa",
          "fallback": "Refund NCG 1.23 in 1.23 to 0x2734048eC2892d111b4fbAB224400847544FC872",
          "fields": Array [
            Object {
              "title": "Reason",
              "value": "The memo(0x0000000000000000000000000000000000000000) is invalid.",
            },
            Object {
              "title": "Address",
              "value": "0x2734048eC2892d111b4fbAB224400847544FC872",
            },
            Object {
              "title": "Request transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "Request Amount",
              "value": "1.23",
            },
            Object {
              "title": "Refund transaction",
              "value": "https://explorer.libplanet.io/9c-internal/transaction?TX-ID",
            },
            Object {
              "title": "Refund Amount",
              "value": "1.23",
            },
          ],
        },
      ],
      "text": "NCG refund event occurred.",
    },
  ],
]
`;
